[TL, MR] warnings removed, bugs fixed